@startuml
title v1.0.2 WebappLoader UML图

interface Loader
interface Reloader
interface Lifecycle
interface java.lang.Runnable
class ResourceEntry
class WebappClassLoader
class WebappLoader
class java.net.URLClassLoader
abstract class AbstractClassLoader

Lifecycle <|.. WebappClassLoader
Lifecycle <|.. WebappLoader
java.lang.Runnable <|.. WebappLoader
Loader <|.. WebappLoader
Reloader <|.. WebappClassLoader
java.net.URLClassLoader <|-- AbstractClassLoader
WebappLoader <-- WebappClassLoader
WebappLoader "1" o-- "n" ResourceEntry
AbstractClassLoader <|-- WebappClassLoader

@enduml